--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fastserve"
-version = "0.1.0"
+version = "0.2.0"
 description = "Add your description here"
 authors = [
     { name = "Yasushi Itoh" }
@@ -10,6 +10,7 @@ dependencies = [
     "grpcio-tools>=1.56.2",
     "grpcio-reflection>=1.56.2",
     "grpcio-health-checking>=1.56.2",
+    "sonora>=0.2.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -20,7 +21,9 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+    "hypercorn>=0.17.3",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
