--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "fastrpc"
+name = "pydantic-rpc"
 version = "0.2.0"
 description = "Add your description here"
 authors = [
@@ -13,7 +13,7 @@ dependencies = [
     "sonora>=0.2.3",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.11"
 
 [build-system]
 requires = ["hatchling"]
