fix a bug and update README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "hypercorn>=0.17.3",
+    "pydantic-ai>=0.0.20",
 ]
 
 [tool.hatch.metadata]
