chore: use uv instead of rye

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,21 @@ dependencies = [
     "grpcio-reflection>=1.56.2",
     "grpcio-health-checking>=1.56.2",
     "sonora>=0.2.3",
-    "connecpy>=1.2.0",
+    "connecpy>=1.2.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
 
 [build-system]
-requires = ["hatchling==1.26.3"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = [
     "hypercorn>=0.17.3",
-    "pydantic-ai>=0.0.20",
+    "pydantic-ai==0.0.20",
+    "ruff>=0.9.4",
 ]
 
 [tool.hatch.metadata]
