--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
 readme = "README.md"
 requires-python = ">= 3.11"
 
+[project.scripts]
+pydantic-rpc = "pydantic_rpc.core:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
