--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "grpcio-reflection>=1.56.2",
     "grpcio-health-checking>=1.56.2",
     "sonora>=0.2.3",
-    "connecpy>=1.2.1",
+    "connecpy>=1.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
@@ -28,8 +28,15 @@ managed = true
 dev-dependencies = [
     "hypercorn>=0.17.3",
     "pydantic-ai==0.0.20",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.20.3",
     "ruff>=0.9.4",
 ]
 
 [tool.hatch.metadata]
 allow-direct-references = true
+
+[tool.pytest.ini_options]
+markers = [
+    "asyncio: mark test as asyncio",
+]
